--- a/style/navigation.scss
+++ b/style/navigation.scss
@@ -24,6 +24,7 @@
     background: #3986B7;
     text-align: center;
     box-sizing: border-box;
+    z-index: 5;
 
     .right-link {
         float: right;
